--- a/index.html
+++ b/index.html
@@ -6,8 +6,24 @@
   <title>Delivery Fee Search</title>
   <style>
     :root{font-family:system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial;}
-    body{margin:0;background:#f6f7fb;color:#111;display:flex;align-items:center;justify-content:center;min-height:100vh;padding:20px;box-sizing:border-box}
-    .card{width:100%;max-width:820px;background:#fff;border-radius:12px;box-shadow:0 6px 20px rgba(20,20,40,.08);padding:28px}
+    body{
+      margin:0;
+      background:#f6f7fb;
+      color:#111;
+      display:flex;
+      justify-content:center;   /* keep it centered horizontally */
+      padding:40px 20px;        /* top + side spacing */
+      box-sizing:border-box;
+    }
+    .card{
+      margin-top:100px;         /* adjust spacing from top */
+      width:100%;
+      max-width:820px;
+      background:#fff;
+      border-radius:12px;
+      box-shadow:0 6px 20px rgba(20,20,40,.08);
+      padding:28px;
+    }
     h1{margin:0 0 8px;font-size:20px}
     p.sub{margin:0 0 18px;color:#5b6170}
 
